--- a/.github/workflows/01-first-workflow.yaml
+++ b/.github/workflows/01-first-workflow.yaml
@@ -23,4 +23,4 @@ jobs:
       - name: echo a string
         run: Write-Output "Windows String"
       - name: echo error
-        run: doesnotexists
+        run: doesnotexistsss
