--- a/.github/workflows/02-workflow-commands.yaml
+++ b/.github/workflows/02-workflow-commands.yaml
@@ -19,3 +19,12 @@ jobs:
       - name: Setting an notice message with parameters
         run: echo "::notice title:Notice title,file=app.js,
           line=2, endLine=3,col=5,endColumn=7::Missing Semicolon"
+      - name: Group of logs
+        run: |
+          echo "::group::My group title"
+          echo "Inside Group"
+          echo "::endgroup"
+      - name: Masting a value
+        run: echo "::add-mask::Secret String"
+      - name: Echo a secret
+        run: echo "secret string"
