--- a/.github/workflows/02-workflow-commands.yaml
+++ b/.github/workflows/02-workflow-commands.yaml
@@ -8,23 +8,23 @@ jobs:
       - name: Setting an error message
         run: echo "::error::Missing semicolon"
       - name: Setting an error message with parameters
-        run: echo "::error title:Error title,file=app.js,
+        run: echo "::error title=Error title,file=app.js,
           line=2, endLine=3,col=5,endColumn=7::Missing Semicolon"
       - name: Setting an debug message with parameters
-        run: echo "::debug title:Debug title,file=app.js,
+        run: echo "::debug title=Debug title,file=app.js,
           line=2, endLine=3,col=5,endColumn=7::Missing Semicolon"
       - name: Setting an warning message with parameters
-        run: echo "::warning title:Warning title,file=app.js,
+        run: echo "::warning title=Warning title,file=app.js,
           line=2, endLine=3,col=5,endColumn=7::Missing Semicolon"
       - name: Setting an notice message with parameters
-        run: echo "::notice title:Notice title,file=app.js,
+        run: echo "::notice title=Notice title,file=app.js,
           line=2, endLine=3,col=5,endColumn=7::Missing Semicolon"
       - name: Group of logs
         run: |
           echo "::group::My group title"
           echo "Inside Group"
           echo "::endgroup"
-      - name: Masting a value
+      - name: Masking a value
         run: echo "::add-mask::Secret String"
       - name: Echo a secret
-        run: echo "secret string"
+        run: echo "Secret string"
