--- a/.github/workflows/03-working-dir-and-shells.yaml
+++ b/.github/workflows/03-working-dir-and-shells.yaml
@@ -4,7 +4,7 @@ on: [push]
 defaults:
     run:
       shell: bash
-      working-directory: /de/ed
+      # working-directory: /de/ed
 jobs: 
     display-wd-info:
         runs-on: ubuntu-latest
@@ -36,4 +36,4 @@ jobs:
             shell: python
             run: |
               import platform
-              print(platform.processos())
+              print(platform.processor())
