--- a/.github/workflows/07-events.yaml
+++ b/.github/workflows/07-events.yaml
@@ -1,8 +1,25 @@
 name: Repository Events
 on: 
   push:
+    branches:
+      - main
+      - "feature/*"      # includes all feature/* branches
+      - "!feature/featA" # except feature/featA
+    # We cannot use branches and branches-ignore at the same time
+    # branches-ignore:
+    #   - develop
+    tags:
+      - v1.* # match v1.1, v1.1.2, v1.2, ...
+      - "!v1.1.1"
+    paths:
+      - "**.js"   # Includes all javascript files
+      - "!app.js" # except app.js
   pull_request:
     types: [opened, assigned, reopened, synchronize]
+    branches:
+      - main
+    paths:
+      - "**.js"
   issues:
     types: [opened, closed]
 
