--- a/.github/workflows/10-manually-triggered.yaml
+++ b/.github/workflows/10-manually-triggered.yaml
@@ -1,9 +1,41 @@
 name: Manually Triggered
 on:
   workflow_dispatch:
-
+    inputs:
+      string:
+        description: A string input
+        type: string
+        required: true
+        default: "Default Value"
+      number: 
+        description: A number input
+        default: 4
+        type: number
+      option:
+        description: "An Option input"
+        required: true
+        default: "Option 3"
+        type: choice
+        options:
+          - Option 1
+          - Option 2
+          - Option 3
+      boolean:
+        description: A boolean option
+        required: false
+        type: boolean
+      environment:
+        description: Environment
+        type: environment
+        required: true
 jobs:
   log-info:
     runs-on: ubuntu-latest
     steps:
       - run: echo $GITHUB_REF
+      - run: |
+          echo "String: S{{ inputs.string }}"
+          echo "Number: S{{ inputs.number }}"
+          echo "Option: S{{ inputs.option }}"
+          echo "Boolean: S{{ inputs.boolean }}"
+          echo "Environment: S{{ inputs.environment }}"
