--- a/.github/workflows/10-manually-triggered.yaml
+++ b/.github/workflows/10-manually-triggered.yaml
@@ -34,8 +34,8 @@ jobs:
     steps:
       - run: echo $GITHUB_REF
       - run: |
-          echo "String: S{{ inputs.string }}"
-          echo "Number: S{{ inputs.number }}"
-          echo "Option: S{{ inputs.option }}"
-          echo "Boolean: S{{ inputs.boolean }}"
-          echo "Environment: S{{ inputs.environment }}"
+          echo "String: ${{ inputs.string }}"
+          echo "Number: ${{ inputs.number }}"
+          echo "Option: ${{ inputs.option }}"
+          echo "Boolean: ${{ inputs.boolean }}"
+          echo "Environment: ${{ inputs.environment }}"
