--- a/.github/workflows/13-expressions-and-contexts.yaml
+++ b/.github/workflows/13-expressions-and-contexts.yaml
@@ -11,6 +11,7 @@ jobs:
           echo ${{ 1 }}
           echo ${{ 'This is a string' }}
           echo ${{ null }}
+          echo ${{ true }}
           echo ${{ 1 > 2 }}
           echo ${{ 'string' == 'String' }}
           echo ${{ true && false }}
