--- a/.github/workflows/13-expressions-and-contexts.yaml
+++ b/.github/workflows/13-expressions-and-contexts.yaml
@@ -4,6 +4,7 @@ run-name: "Expressions & Contexts by @${{ github.actor }}, event: ${{ github.eve
 jobs:
   using-expression-and-contexts:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     steps:
       - name: Expressions
         id: expressions
