--- a/.github/workflows/13-expressions-and-contexts.yaml
+++ b/.github/workflows/13-expressions-and-contexts.yaml
@@ -2,6 +2,13 @@ name: Expressions & Contexts
 on: [push, pull_request, issues, workflow_dispatch]
 run-name: "Expressions & Contexts by @${{ github.actor }}, event: ${{ github.event_name }}"
 jobs:
+  runs-on-issues-and-psr:
+    runs-on: ubuntu=latest
+    if: contains(fromJson('["issues", "pull_reques"]'), github.event_name)
+    steps:
+      - name: Run only if issue has a bug label
+        if: contains(github.event.issue.labels.*.name, 'bug')
+        run: echo ${{ join(github.event.issue.labels.*.name, ',') }}
   using-expression-and-contexts:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
