--- a/.github/workflows/13-expressions-and-contexts.yaml
+++ b/.github/workflows/13-expressions-and-contexts.yaml
@@ -3,7 +3,7 @@ on: [push, pull_request, issues, workflow_dispatch]
 run-name: "Expressions & Contexts by @${{ github.actor }}, event: ${{ github.event_name }}"
 jobs:
   runs-on-issues-and-psr:
-    runs-on: ubuntu=latest
+    runs-on: ubuntu-latest
     if: contains(fromJson('["issues", "pull_reques"]'), github.event_name)
     steps:
       - name: Run only if issue has a bug label
