--- a/.github/workflows/15-env-variables.yaml
+++ b/.github/workflows/15-env-variables.yaml
@@ -29,4 +29,4 @@ jobs:
           echo $STEP_LEVEL_ENV
           echo $JOB_LEVEL_ENV
           echo $WF_LEVEL_ENV
-          echo $NEW_ENV_VAR
+          echo $NEW_ENV_VARIABLE
