--- a/.github/workflows/15-env-variables.yaml
+++ b/.github/workflows/15-env-variables.yaml
@@ -20,6 +20,15 @@ jobs:
         run: |
           echo "NEW_ENV_VARIABLE=$(date)" >> "$GITHUB_ENV"
           echo "JOB_LEVEL_ENV=$RANDOM" >> "$GITHUB_ENV"
+      - name: Multiline Env Var
+        run: |
+          DELIMITER=1234
+          echo "RANDOM_JOKE<<$DELIMITER" >> "$GITHUB_ENV"
+          echo "Here is a joke: " >> "$GITHUB_ENV"
+          curl -s https://icanhazdadjoke.com/ >> "$GITHUB_ENV"
+          echo "" >> "$GITHUB_ENV"
+          echo "$DELIMITER" >> "$GITHUB_ENV"
+
       - name: Log Custom ENV Vars
         env:
           STEP_LEVEL_ENV: Available to only this steps
